<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Calculadora">

    <TextView
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="0"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="0dp"
            android:padding="0dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnPrimero"
                android:layout_margin="0.5dp"
                android:paddingLeft="30dp"
                android:drawableLeft="@drawable/ic_mas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/del"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnPrimero"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/ac"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnPrimero"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/divicion"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnPrimero"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="0dp"
            android:padding="0dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/abrirParentecis"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/cerrarParentecis"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/porcentaje"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/multiplicacion"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnPrimero"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="0dp"
            android:padding="0dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/siete"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/ocho"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/nueve"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/resta"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnPrimero"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="0dp"
            android:padding="0dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/cuatro"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/cinco"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/seis"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnSegundo"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:text="@string/suma"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:background="@color/btnPrimero"
                android:layout_margin="0.5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="0.75"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:text="@string/uno"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:background="@color/btnSegundo"
                        android:layout_margin="0.5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <Button
                        android:text="@string/dos"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:background="@color/btnSegundo"
                        android:layout_margin="0.5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <Button
                        android:text="@string/tres"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:background="@color/btnSegundo"
                        android:layout_margin="0.5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:text="@string/cero"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:background="@color/btnSegundo"
                        android:layout_margin="0.5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <Button
                        android:text="00"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:background="@color/btnSegundo"
                        android:layout_margin="0.5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <Button
                        android:text="@string/punto"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:background="@color/btnSegundo"
                        android:layout_margin="0.5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="0.25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <Button
                    android:text="@string/igual"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:background="@color/btnPrimero"
                    android:layout_margin="0.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>