<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorFondo"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/time"
            android:textSize="40sp"
            android:gravity="right"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/Plan"
            android:textSize="35sp"
            android:textStyle="normal"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="normal"
        android:textSize="18sp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:drawablePadding="10dp"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_usuario"
        android:hint="@string/usuario"
        android:layout_height="wrap_content" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:drawablePadding="10dp"
        app:met_baseColor="@android:color/white"
        app:met_floatingLabel="normal"
        android:layout_marginRight="30dp"
        android:drawableLeft="@drawable/ic_contra"
        android:layout_marginLeft="30dp"
        android:inputType="textPassword"
        android:hint="@string/contra"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_redondo"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="Recuperar Contraseña | Registrate"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>