<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <Button
            android:id="@+id/btnConversacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="35dp"
            android:background="@color/colorPrimary"
            android:onClick="clcikConversacion"
            android:text="@string/btnConversacion"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:background="@color/colorPrimary"
            android:onClick="clickLogin"
            android:text="@string/btnLigin"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnCalculadora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:background="@color/colorPrimary"
            android:onClick="clickCalculadora"
            android:text="@string/btnCalculadora"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnMisDatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="35dp"
            android:background="@color/colorPrimary"
            android:onClick="clickMisDatos"
            android:text="@string/btnMisDatos"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

</LinearLayout>